--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   },
   "devDependencies": {
     "@vuepress/bundler-vite": "2.0.0-rc.24",
+    "@vuepress/plugin-slimsearch": "2.0.0-rc.112",
     "sass-embedded": "^1.89.2",
     "vue": "^3.5.17",
     "vuepress": "2.0.0-rc.24",
+    "vuepress-plugin-meting2": "^1.4.2",
     "vuepress-theme-hope": "2.0.0-rc.94"
   },
   "pnpm": {
